# spiders2

v1/: rtr-101_workflow.bat  vortex.callsign-opperator.bat
v1/source/: compare.bat  list.bat  send-message.bat
v1/source/agent-echo/saved/: 0008-fly-send.txt
v1/source/agent-words/: currently-on.txt
v1/source/bird/: bird.cabal
v1/source/llama-words/src/: LlamaWords.hs
v1/source/llama/llama-chats/: catfish3.txt
v1/source/spider-app/outbox/: echo-test.txt  rust.txt  test-query.txt
v1/source/words/associations/a/: apple.csv
v2/source/: bird-run.bat  demo.bat  kill-all.bat  status.bat  words-generate.bat
v2/source/agent-echo/saved/: 0001-route-test.txt
v2/source/agent-groq/outbox/: wc-test.txt
v2/source/agent-groq/saved/: 0007-compare-real.txt
v2/source/bird/src/: Bird.hs
v2/source/groq-llama/src/Groq/: Client.hs
v2/source/llama/src/: LlamaText.hs
v2/source/llm-common/src/LLM/: HTTP.hs
v2/source/postbox/: postbox.cabal
v2/source/postbox/src/Postbox/: Compare.hs  Fly.hs
v2/source/spider-app/inbox/: query_
v2/source/test-agent/outbox/: query-15574058.txt
v3/: cabal.project  run_all_callsigns.bat
v3/source/: ping.bat  start-agent.bat  watch-outputs.bat
v3/source/agent-echo/inbox/: query- 9530480.txt
v3/source/agent-echo/saved/: 0004-llm-query.txt  0009-fly-kill.txt
v3/source/agent-groq/saved/: 0006-compare-len.txt
v3/source/llama-words/llama-chats/: dogcat.txt
v3/source/llama-words/src/: Main.hs
v3/source/llama/src/: Main.hs
v3/source/llm-common/src/LLM/: Types.hs
v3/source/postbox/src/Postbox/: Request.hs
v3/source/spider-app/: post-quick.bat  run.bat
v3/source/spider-app/outbox/: test.txt
v3/source/test-agent/saved/: 0005-query-15222045.txt
v3/source/words/: words.cabal
v3/source/words/associations/b/: blue.csv
v3/source/words/src/: Associations.hs  Words.hs
v4/: vortex.bat
v4/source/agent-echo/inbox/: query- 9533751.txt
v4/source/agent-groq/saved/: 0001-from-agent-echo.txt  0008-wc-test.txt
v4/source/agent-words/outbox/: test.txt
v4/source/bird/src/: Main.hs
v4/source/bird/src/Bird/: Test.hs
v4/source/llama-words/: llama-words.cabal
v4/source/llama-words/llama-chats/: catfish5.txt  dogcat5.txt
v4/source/llm-common/: llm-common.cabal
v4/source/postbox/src/Postbox/: Modality.hs
v4/source/scraper/src/Scraper/: Client.hs
v4/source/spider-app/: spider-app.cabal  stop.bat
v4/source/test-agent/saved/: 0003-query-15222028.txt
v5/source/: bird-ping.bat  send-all.bat
v5/source/agent-echo/inbox/: query- 9513960.txt
v5/source/agent-echo/saved/: 0003-from-agent-groq.txt  0006-fly-test.txt  0007-fly-list.txt
v5/source/agent-groq/saved/: 0002-reply.txt  0005-compare-hex.txt
v5/source/groq-llama/: groq-llama.cabal
v5/source/huggingface-llama/: huggingface-llama.cabal
v5/source/huggingface-llama/src/HuggingFace/: Client.hs
v5/source/llama-words/llama-chats/: catdog7.txt
v5/source/llama/src/: LlamaBatch.hs
v5/source/llm-common/src/LLM/: JSON.hs
v5/source/postbox/src/: Postbox.hs
v5/source/spider-app/: post.bat
v5/source/spider-app/outbox/: haskell.txt
v5/source/spider-app/src/: Main.hs
v5/source/spider-app/src/Spider/: Pipeline.hs
v5/source/test-agent/: currently-on.txt
v5/source/test-agent/saved/: 0001-query-15220800.txt  0023-query-15483315.txt
v6/: cabal.project  overall.eml  overview.eml  trim-summaries.txt
v6/runtime/: fox.callsign.bat
v6/source/: bird-test.bat  start-both.bat
v6/source/agent-groq/: currently-on.txt
v6/source/agent-groq/saved/: 0004-compare-llm.txt
v6/source/bird/src/Bird/: Suite.hs
v6/source/llama/: llama.cabal
v6/source/llama/llama-chats/: catfish7.txt
v6/source/llama/src/: Llama.hs
v6/source/postbox/src/Postbox/: Poll.hs
v6/source/scraper/: scraper.cabal
v6/source/test-agent/saved/: 0026-compare-demo.txt  0028-query-15574058.txt
v6/source/words/src/: Main.hs
