cabal-version:      2.4
name:               bird
version:            0.1.0.0
synopsis:           Test harness for postbox system - uses fly interface exclusively
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Bird
    Bird.Test
    Bird.Suite
  build-depends:
    base >=4.14 && <5,
    containers,
    directory,
    filepath,
    postbox,
    time

executable bird
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -threaded
  other-modules:
    Bird
    Bird.Test
    Bird.Suite
  build-depends:
    base >=4.14 && <5,
    containers,
    directory,
    filepath,
    postbox,
    time
