cabal-version:      2.4
name:               words
version:            0.1.0.0
synopsis:           Text scoring using hex-digit values and corpus lookup

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Words, Associations
  build-depends:    base, random, directory

executable words
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Words
  build-depends:    base, random
