cabal-version:      2.4
name:               llm-common
version:            0.1.0.0
synopsis:           Shared types and utilities for LLM API clients
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    LLM.Types
    LLM.JSON
    LLM.HTTP
  build-depends:
    base >=4.14 && <5,
    aeson,
    text,
    bytestring,
    vector,
    http-client,
    http-client-tls,
    http-conduit,
    case-insensitive
