cabal-version:      2.4
name:               spider-app
version:            0.1.0.0
synopsis:           File watcher that generates URLs from text via LLM
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Spider.Pipeline
  build-depends:
    base >=4.14 && <5,
    directory,
    filepath,
    process,
    llm-common,
    groq-llama,
    huggingface-llama,
    scraper,
    postbox,
    words

executable spider
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -threaded
  other-modules:
    Spider.Pipeline
  build-depends:
    base >=4.14 && <5,
    directory,
    filepath,
    process,
    llm-common,
    groq-llama,
    huggingface-llama,
    scraper,
    postbox,
    words
