cabal-version:      2.4
name:               groq-llama
version:            0.1.0.0
synopsis:           Groq API client for Llama models
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Groq.Client
  build-depends:
    base >=4.14 && <5,
    llm-common
