cabal-version:      2.4
name:               huggingface-llama
version:            0.1.0.0
synopsis:           HuggingFace API client for Llama models
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    HuggingFace.Client
  build-depends:
    base >=4.14 && <5,
    llm-common
