cabal-version:      2.4
name:               scraper
version:            0.1.0.0
synopsis:           Web scraper for extracting text content from URLs
license:            MIT

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Scraper.Client
  build-depends:
    base >=4.14 && <5,
    text,
    bytestring,
    http-conduit,
    scalpel
